--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
           led.on();
           obniz.display.clear();
           obniz.display.font('Avenir',50)
-          obniz.display.print("💬");
+          obniz.display.print("💬meeting");
         });
 
         $("#off").click(function() {
           led.off();
           obniz.display.clear();
           obniz.display.font('Avenir',50)
-          obniz.display.print("🥁");
+          obniz.display.print("🥁music");
         });
       };
     </script>
