--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
           led.on();
           obniz.display.clear();
           obniz.display.font('Avenir',50)
-          obniz.display.print("💬meeting");
+          obniz.display.print("💬");
+          obniz.display.print("meeting");
         });
 
         $("#off").click(function() {
