--- a/index.html
+++ b/index.html
@@ -46,14 +46,13 @@
           obniz.display.clear();
           obniz.display.font('Avenir',50)
           obniz.display.print("💬");
-          obniz.display.print("meeting");
         });
 
         $("#off").click(function() {
           led.off();
           obniz.display.clear();
           obniz.display.font('Avenir',50)
-          obniz.display.print("🥁music");
+          obniz.display.print("🥁");
         });
       };
     </script>
